fix: invisible checkox on submit

--- a/src/assets/sass/_ContactSection.scss
+++ b/src/assets/sass/_ContactSection.scss
@@ -119,7 +119,8 @@
 
     &.hidden {
       .input-group,
-      .btn[type="submit"] {
+      .btn[type="submit"],
+      .checkbox-grid {
         opacity: 0;
         visibility: hidden;
       }
